# novax-price-alert

./: .env.example  .gitignore  AGENTS.md  DEPLOYMENT_COMPLETION_REPORT.md  Dockerfile  Dockerfile.ir-vps  INDEX.md  IRANIAN_VPS_SETUP.md  MEMORY.md  QUICKSTART.md  README.md  README_VPS_FILES.md  SECURITY.md  SECURITY_DEPLOYMENT_REPORT.md  SUPPORT.md  alembic.ini  app.db  bale_price_alert.db  docker-compose.ir-vps.yml  nginx.ir-vps.conf  pyproject.toml  render.yaml
deploy/: SUBDOMAIN_SETUP.md
docs/: ALERT_HARDENING_CONTRACTS.md  ALERT_LIFECYCLE_CONTRACT.md  API.md  ARCHITECTURE.md  BOT_BEHAVIOR.md  CLOUDFLARE_RENDER_DEPLOYMENT.md  CONTRACTS_AND_POLICIES.md  DEPLOYMENT.md  IMPLEMENTATION_ROADMAP_FA.md  IRANIAN_VPS_DEPLOYMENT.md  IRANIAN_VPS_QUICKSTART.md  NEON_SETUP.md  NEXT_STEPS_AND_ROADMAP_FA.md  OBSERVABILITY.md  OPERATIONS.md  PROGRESS.md  PROVIDERS.md  QUICK_START_FA.md  README.md  RECENT_CHANGES.md  RELEASE_READINESS_FA.md  RENDER_ENV_VARS.md  ROADMAP.md  TELEGRAM_RUNBOOK.md  USER_GUIDE_FA.md  marketing_plan.md  privacy_policy.md  terms_of_service.md
migrations/: env.py
mini-app/: .env.example  .eslintrc.json  DEVELOPER.md  Dockerfile  README.md  docker-compose.yml  index.html  jest.config.js  jest.setup.js  metadata.json  monitoring.config.js  package-lock.json  package.json  server.ts  vite.config.ts
scripts/: backup-db.sh  deploy-backend-production.sh  deploy-cloudflare-relay.sh  deploy-plan.py  fetch_prices_to_vps.py  pm2-start-api.sh  pm2-start-mini.sh  pm2-start-worker.sh  restore-db.sh  setup-github-security.sh  setup-ir-vps.sh  setup-render.sh  verify-telegram-production.mjs
tests/: conftest.py  test_alert_crud_integration.py  test_alert_evaluator.py  test_alert_evaluator_idempotency.py  test_alert_event_model.py  test_alert_hardening.py  test_alert_lifecycle_e2e.py  test_alert_lifecycle_e2e_v2.py  test_alert_model.py  test_alert_rule_model.py  (+21 more)
(+166 files in other folders)
