[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bale-price-alert"
version = "0.1.0"
description = "Bale-based price alert backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "aiosqlite>=0.22.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.2",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
mypy_path = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "alembic>=1.18.4",
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]

[tool.setuptools.packages.find]
where = ["src"]

